--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Python Flask Bucket List App</title>\
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <script src="{{ url_for('static', filename='js/main.js') }}" > </script>
+
 </head>
 
 <body>
@@ -10,17 +12,35 @@
 <header class="header">
 
 </header>
-<main> статейки:
+<main>
 
-     {% for message in articles %}
-     <div class="articles">
-          <a href={{ message.link }}> {{ message.title }}</a>
+    <div class="articles">
 
-         <time>{{ message.date }}</time>
-         <p>{{ message.text }} </p>
-         <hr>
-     </div>
-     {% endfor %}
+    {% for message in articles %}
+    <div class="article">
+        <a href={{ message.link }}> {{ message.title }}</a>
+
+        <time>{{ message.date }}</time>
+        <p>{{ message.text }} </p>
+
+        {% if message.sequences != '' %}
+        <h4> Обработка текста через tomita не была запущена на этой новости</h4>
+        {% else %}
+        <p> {{ message.sequences }} </p>
+        {% endif %}
+        <button class="getFacts" data-id="{{ message._id }}">Получить предложения с фактами</button>
+
+        {% if message.tonality != '' %}
+        <h4> Тональность текста не определена </h4>
+        {% else %}
+        <p> {{ message.tonality }} </p>
+        {% endif %}
+        <button class="getTonality" data-id="{{ message._id }}">Запустить анализ тональности</button>
+
+        <hr>
+    </div>
+    {% endfor %}
+    </div>
 </main>
 
 </body>
