--- a/application/static/css/style.css
+++ b/application/static/css/style.css
@@ -1,9 +1,41 @@
 body {
   width: 65%;
   margin: auto;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 15px;
 }
 
 .info {
   display: flex;
   justify-content: space-between;
+}
+
+.article {
+  margin: 20px;
+  padding: 1rem;
+  border: 1px solid rgba(27,31,35,.15);
+  border-radius: 4px;
+}
+
+.article-title {
+  font-size: 1.1rem;
+}
+
+.white-btn {
+  border: 1px solid rgb(15, 118, 222);
+  border-radius: .25rem;
+  cursor: pointer;
+  padding: 5px 15px;
+  background-color: white;
+  display: block;
+  text-align: center;
+}
+
+.white-btn:hover {
+  background-color: #f0f0f0;
+}
+
+time {
+  font-size: 13px;
+  color: grey;
 }
